--- a/Client/app/src/main/res/layout/activity_new_transaction.xml
+++ b/Client/app/src/main/res/layout/activity_new_transaction.xml
@@ -336,7 +336,9 @@
         android:id="@+id/totalrow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="20dp"
+        android:layout_marginRight="5dp"
         android:layout_marginBottom="10dp"
         android:gravity="center_horizontal|center_vertical"
         app:layout_constraintBottom_toTopOf="@id/buttonrow"
@@ -358,28 +360,28 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@id/total"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/total"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimary"
-                android:textSize="30sp"
+                android:textColor="#FFDD00"
+                android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/tvresult"
                 app:layout_constraintRight_toLeftOf="@id/resultwithdiscount"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/resultwithdiscount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total with discount: "
+                android:text="w/ discount: "
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/total"
                 app:layout_constraintRight_toLeftOf="@id/totalwithdiscount"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/totalwithdiscount"
@@ -390,7 +392,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/resultwithdiscount"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </TableRow>
