Json being parsed and shown on the page

--- a/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/App.xaml
+++ b/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/App.xaml
@@ -5,7 +5,16 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="WeatherXamarim.App">
-    <Application.Resources>
-
+   <Application.Resources>
+        <ResourceDictionary>
+            <Color x:Key="PageBackgroundColor">Yellow</Color>
+            <Color x:Key="HeadingTextColor">Black</Color>
+            <Color x:Key="PrimaryColour">#9400D3</Color>
+            <Style x:Key="LabelPageHeadingStyle" TargetType="Label">
+                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="HorizontalOptions" Value="Center" />
+                <Setter Property="TextColor" Value="{StaticResource HeadingTextColor}" />
+            </Style>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
