--- a/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/App.xaml
+++ b/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/App.xaml
@@ -9,7 +9,7 @@
         <ResourceDictionary>
             <Color x:Key="PageBackgroundColor">Yellow</Color>
             <Color x:Key="HeadingTextColor">Black</Color>
-            <Color x:Key="PrimaryColour">#9400D3</Color>
+            <Color x:Key="PrimaryColour">#FE5B00</Color>
             <Style x:Key="LabelPageHeadingStyle" TargetType="Label">
                 <Setter Property="FontAttributes" Value="Bold" />
                 <Setter Property="HorizontalOptions" Value="Center" />
