--- a/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/MainPage.xaml
+++ b/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/MainPage.xaml
@@ -3,7 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:forms="clr-namespace:Microcharts.Forms;assembly=Microcharts.Forms"
              mc:Ignorable="d"
              x:Class="WeatherXamarim.MainPage">
 
@@ -63,8 +62,10 @@
                 </StackLayout>
             </Grid>
         </Frame>
-        <StackLayout Grid.Row="2" BackgroundColor="Transparent" Orientation="Horizontal" Margin="20" HorizontalOptions="End">
-            <ImageButton x:Name="ToggleChartOrList" Source="listColor.png" WidthRequest="15" HeightRequest="15" Clicked="ToggleChartOrList_Clicked"/>
+        <StackLayout Grid.Row="2" BackgroundColor="Transparent" Orientation="Horizontal" Margin="20" HorizontalOptions="Center" HeightRequest="125">
+            <Label Text="24 hour Forecast" TextColor="#7D7D7D" FontSize="20"  />
+            <Button Text="Chart" Clicked="ForecastChart_clicked"/>
+
         </StackLayout>
 
 
@@ -113,9 +114,7 @@
             </ListView.ItemTemplate>
         </ListView>
 
-        <ScrollView x:Name="WeatherForecastChart" IsVisible="False">
-            <forms:ChartView x:Name="ForecastChart" HeightRequest="50"/>
-        </ScrollView>
+
        
     </Grid>
 
