--- a/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/ForecastDetailPage.xaml
+++ b/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/ForecastDetailPage.xaml
@@ -4,12 +4,54 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="WeatherXamarim.ForecastDetailPage">
+             x:Class="WeatherXamarim.ForecastDetailPage"
+             Title="{Binding ForecastDate}">
+    
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+
+        <Grid VerticalOptions="CenterAndExpand">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+
+            <StackLayout Grid.Row="0" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center">
+                <Label Text="Description" TextColor="{StaticResource PrimaryColour}" FontSize="16" HorizontalOptions="Center"/>
+                <Label Text="{Binding info.weather[0].description}" TextColor="{StaticResource PrimaryColour}" FontSize="12" HorizontalOptions="Center"/>
+            </StackLayout>
+
+            <StackLayout Grid.Row="0" Grid.Column="1" HorizontalOptions="Center" VerticalOptions="Center">
+                <Label Text="Description" TextColor="{StaticResource PrimaryColour}" FontSize="16" HorizontalOptions="Center"/>
+                <Label Text="{Binding info.weather[0].description}" TextColor="{StaticResource PrimaryColour}" FontSize="12" HorizontalOptions="Center"/>
+            </StackLayout>
+
+            <StackLayout Grid.Row="0" Grid.Column="2" HorizontalOptions="Center" VerticalOptions="Center">
+                <Label Text="Humidity" TextColor="{StaticResource PrimaryColour}" FontSize="16" HorizontalOptions="Center"/>
+                <Label Text="{Binding info.main.humidity}" TextColor="{StaticResource PrimaryColour}" FontSize="12" HorizontalOptions="Center"/>
+            </StackLayout>
+
+            <StackLayout Grid.Row="1" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center">
+                <Label Text="Cloudiness" TextColor="{StaticResource PrimaryColour}" FontSize="16" HorizontalOptions="Center"/>
+                <Label Text="{Binding info.clouds.all}" TextColor="{StaticResource PrimaryColour}" FontSize="12" HorizontalOptions="Center"/>
+            </StackLayout>
+
+            <StackLayout Grid.Row="1" Grid.Column="1" HorizontalOptions="Center" VerticalOptions="Center">
+                <Label Text="Wind Speed" TextColor="{StaticResource PrimaryColour}" FontSize="16" HorizontalOptions="Center"/>
+                <Label Text="{Binding info.wind.speed)}" TextColor="{StaticResource PrimaryColour}" FontSize="12" HorizontalOptions="Center"/>
+            </StackLayout>
+
+            <StackLayout Grid.Row="1" Grid.Column="2" HorizontalOptions="Center" VerticalOptions="Center">
+                <Label Text="Wind angle" TextColor="{StaticResource PrimaryColour}" FontSize="16" HorizontalOptions="Center"/>
+                <Label Text="{Binding info.wind.deg}" TextColor="{StaticResource PrimaryColour}" FontSize="12" HorizontalOptions="Center"/>
+            </StackLayout>
+
+        </Grid>
+        
     </ContentPage.Content>
 </ContentPage>
