--- a/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/MainPage.xaml
+++ b/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/MainPage.xaml
@@ -14,6 +14,20 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+        <StackLayout>
+            <Picker Title="Add a city" 
+                    x:Name="addcity"
+                    TitleColor="Red" 
+                    SelectedIndexChanged="OnPickerSelectedIndexChanged"/>
+
+        </StackLayout>
+        <StackLayout>
+            <Picker Title="Which city" 
+                    x:Name="favoritecities"
+                    TitleColor="Red" 
+                    SelectedIndexChanged="OnPickerSelectedIndexChanged2"/>
+
+        </StackLayout>
 
         <Image x:Name ="WeatherBackground" Source="overlay.png" Aspect="Fill" HeightRequest="250" VerticalOptions="StartAndExpand"/>
         <StackLayout Orientation="Vertical" Margin="0,20" HorizontalOptions="Center" VerticalOptions="Center">
@@ -62,9 +76,9 @@
                 </StackLayout>
             </Grid>
         </Frame>
-        <StackLayout Grid.Row="2" BackgroundColor="Transparent" Orientation="Horizontal" Margin="20" HorizontalOptions="Center" HeightRequest="125">
-            <Label Text="24 hour Forecast" TextColor="#7D7D7D" FontSize="20"  />
-            <Button Text="Chart" Clicked="ForecastChart_clicked"/>
+        <StackLayout Grid.Row="2" BackgroundColor="Transparent" Orientation="Horizontal" Margin="20" HorizontalOptions="Center" HeightRequest="200">
+            <Label Text="24 hour Forecast" TextColor="#7D7D7D" FontSize="20"  HorizontalOptions="FillAndExpand" VerticalOptions="Start"/>
+            <Button Text="Chart" Clicked="ForecastChart_clicked" HorizontalOptions="FillAndExpand" VerticalOptions="Start"/>
 
         </StackLayout>
 
