--- a/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/ForecastDetailPage.xaml
+++ b/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/ForecastDetailPage.xaml
@@ -6,52 +6,71 @@
              mc:Ignorable="d"
              x:Class="WeatherXamarim.ForecastDetailPage"
              Title="{Binding ForecastDate}">
-    
-    <ContentPage.Content>
 
-        <Grid VerticalOptions="Center" HorizontalOptions="CenterAndExpand">
-
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-
-            <StackLayout Grid.Row="0" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center">
-                <Label Text="Description" TextColor="{StaticResource PrimaryColour}" FontSize="16" HorizontalOptions="Center"/>
-                <Label x:Name ="Description" TextColor="{StaticResource PrimaryColour}" FontSize="12" HorizontalOptions="Center"/>
-            </StackLayout>
-
-            <StackLayout Grid.Row="0" Grid.Column="1" HorizontalOptions="Center" VerticalOptions="Center">
-                <Label Text="Description" TextColor="{StaticResource PrimaryColour}" FontSize="16" HorizontalOptions="Center"/>
-                <Label x:Name ="coiso" TextColor="{StaticResource PrimaryColour}" FontSize="12" HorizontalOptions="Center"/>
-            </StackLayout>
-
-            <StackLayout Grid.Row="0" Grid.Column="2" HorizontalOptions="Center" VerticalOptions="Center">
-                <Label Text="Humidity" TextColor="{StaticResource PrimaryColour}" FontSize="16" HorizontalOptions="Center"/>
-                <Label x:Name ="Humidity" TextColor="{StaticResource PrimaryColour}" FontSize="12" HorizontalOptions="Center"/>
-            </StackLayout>
-
-            <StackLayout Grid.Row="1" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center">
-                <Label Text="Cloudiness" TextColor="{StaticResource PrimaryColour}" FontSize="16" HorizontalOptions="Center"/>
-                <Label x:Name ="Clouds"  TextColor="{StaticResource PrimaryColour}" FontSize="12" HorizontalOptions="Center"/>
-            </StackLayout>
-
-            <StackLayout Grid.Row="1" Grid.Column="1" HorizontalOptions="Center" VerticalOptions="Center">
-                <Label Text="Wind Speed" TextColor="{StaticResource PrimaryColour}" FontSize="16" HorizontalOptions="Center"/>
-                <Label x:Name="Wind_Speed" TextColor="{StaticResource PrimaryColour}" FontSize="12" HorizontalOptions="Center"/>
-            </StackLayout>
-
-            <StackLayout Grid.Row="1" Grid.Column="2" HorizontalOptions="Center" VerticalOptions="Center">
-                <Label Text="Wind angle" TextColor="{StaticResource PrimaryColour}" FontSize="16" HorizontalOptions="Center"/>
-                <Label x:Name="Wind_Deg" Text="{Binding info.wind.deg}" TextColor="{StaticResource PrimaryColour}" FontSize="12" HorizontalOptions="Center"/>
-            </StackLayout>
-
-        </Grid>
+    <Grid VerticalOptions="FillAndExpand">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
         
-    </ContentPage.Content>
+        <StackLayout Grid.Row="1" BackgroundColor="#0787FF"  HeightRequest="50" VerticalOptions="StartAndExpand"  HorizontalOptions="FillAndExpand">
+            <Image x:Name ="WeatherBackground" Source=""  WidthRequest="38" HeightRequest="38" HorizontalOptions="Center" VerticalOptions="Center" />
+        </StackLayout>
+
+        <StackLayout Grid.Row="2" BackgroundColor="#000000" HeightRequest="30" VerticalOptions="StartAndExpand"  HorizontalOptions="FillAndExpand">
+            <Label x:Name="temperature" Text="Description" TextColor="{StaticResource PrimaryColour}" FontSize="16" HorizontalOptions="Center" VerticalOptions="Center"/>
+        </StackLayout>
+        <StackLayout Grid.Row="3">
+            <Grid VerticalOptions="Center" HorizontalOptions="CenterAndExpand">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+
+                <StackLayout Grid.Row="0" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center">
+                    <Label Text="Description" TextColor="{StaticResource PrimaryColour}" FontSize="16" HorizontalOptions="Center"/>
+                    <Label x:Name ="Description" TextColor="{StaticResource PrimaryColour}" FontSize="12" HorizontalOptions="Center"/>
+                </StackLayout>
+
+                <StackLayout Grid.Row="0" Grid.Column="1" HorizontalOptions="Center" VerticalOptions="Center">
+                    <Label Text="Description" TextColor="{StaticResource PrimaryColour}" FontSize="16" HorizontalOptions="Center"/>
+                    <Label x:Name ="coiso" TextColor="{StaticResource PrimaryColour}" FontSize="12" HorizontalOptions="Center"/>
+                </StackLayout>
+
+                <StackLayout Grid.Row="0" Grid.Column="2" HorizontalOptions="Center" VerticalOptions="Center">
+                    <Label Text="Humidity" TextColor="{StaticResource PrimaryColour}" FontSize="16" HorizontalOptions="Center"/>
+                    <Label x:Name ="Humidity" TextColor="{StaticResource PrimaryColour}" FontSize="12" HorizontalOptions="Center"/>
+                </StackLayout>
+
+                <StackLayout Grid.Row="1" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center">
+                    <Label Text="Cloudiness" TextColor="{StaticResource PrimaryColour}" FontSize="16" HorizontalOptions="Center"/>
+                    <Label x:Name ="Clouds"  TextColor="{StaticResource PrimaryColour}" FontSize="12" HorizontalOptions="Center"/>
+                </StackLayout>
+
+                <StackLayout Grid.Row="1" Grid.Column="1" HorizontalOptions="Center" VerticalOptions="Center">
+                    <Label Text="Wind Speed" TextColor="{StaticResource PrimaryColour}" FontSize="16" HorizontalOptions="Center"/>
+                    <Label x:Name="Wind_Speed" TextColor="{StaticResource PrimaryColour}" FontSize="12" HorizontalOptions="Center"/>
+                </StackLayout>
+
+                <StackLayout Grid.Row="1" Grid.Column="2" HorizontalOptions="Center" VerticalOptions="Center">
+                    <Label Text="Wind angle" TextColor="{StaticResource PrimaryColour}" FontSize="16" HorizontalOptions="Center"/>
+                    <Label x:Name="Wind_Deg" Text="{Binding info.wind.deg}" TextColor="{StaticResource PrimaryColour}" FontSize="12" HorizontalOptions="Center"/>
+                </StackLayout>
+
+            </Grid>
+        </StackLayout>
+
+        
+
+    </Grid>
 </ContentPage>
