--- a/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/Pages/ForecastChart.xaml
+++ b/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/Pages/ForecastChart.xaml
@@ -7,6 +7,6 @@
              xmlns:forms="clr-namespace:Microcharts.Forms;assembly=Microcharts.Forms"
              x:Class="WeatherXamarim.ForecastChart">
 
-        <forms:ChartView x:Name="ForecastChartView" HeightRequest="50"/>
+        <forms:ChartView x:Name="ForecastChartView"/>
     
 </ContentPage>
